# performant_encryption

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: aes.rs  argon2.rs  bcrypt.rs  helpers.rs  lib.rs  rsa.rs  scrypt.rs  sha.rs
