[package]
name = "performant_encryption"
version = "0.1.1"
edition = "2021"
description = "This is a Rust library providing external facing functions to performant and trusted encryption in Rust"
license = "Apache-2.0"

[lib]
name="performant_encryption"
path = "src/lib.rs"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.13.0"
magic-crypt = "3.1.12"
rand = "0.8.5"
rsa = "0.7.2"
