[package]
name = "performant_encryption"
version = "0.1.1"
edition = "2021"
description = "This is a Rust library providing external facing functions to performant and trusted encryption in Rust"
license = "Apache-2.0"

[lib]
name="performant_encryption"
path = "src/lib.rs"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.1"
argon2 = "0.4.1"
base64 = "0.20.0"
bcrypt = "0.13.0"
ed25519-dalek = "1.0.1"
rand = "0.8.5"
rsa = "0.7.2"
scrypt = "0.10.0"
sha3 = "0.10.6"

[profile.dev.package.num-bigint-dig]
opt-level = 3

[dependencies.ed25519-dalek]
version = "1"